Main buttons: Overflow bug on firefox fixed. Web page: Pending svg of styles fixed.

--- a/app/scss/_bem/_buttons.scss
+++ b/app/scss/_bem/_buttons.scss
@@ -1,10 +1,10 @@
 .button{
 	position: relative;
-	height: 50px;
+	height: 20px;
 	text-decoration: none;
-	display: table;
+	display: inline-block;
+	padding: 15px 0;
 	overflow: hidden;
-	// border-top: 1px solid #afafaf;
 
 	&:before, &:after{
 		content: '';
