--- a/app/scss/_bem/_image-helpers.scss
+++ b/app/scss/_bem/_image-helpers.scss
@@ -13,7 +13,7 @@
 	&--3-half-col{
 		width: 340px;
 		height: 360px;
-		background-color: #fcfcfc;
+		background-color: #fafafa;
 	}
 
 	&--5-col{
@@ -42,6 +42,7 @@
 	}
 		#responsive-svg{width: 201px;}
 		#ux-svg{width: 181px;}
+		#assets-svg{width: 166px;}
 		#brandid-svg{width: 154px;}
 		#print-svg{width: 132px;}
 }
